<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main (list) -->
    <string name="create_alarm">Create alarm</string>
    <string name="delete_all">Clear all</string>
    <string name="listItem_norepeat">No repeat</string>
    <string name="listItem_method_math">Math</string>
    <string name="listItem_method_qr">QR</string>


    <!-- create alarm -->
    <string name="name_textview">Name:</string>
    <string name="active_text">Active:</string>
    <string name="vibrate_text">Vibrate:</string>
    <string name="snoozeDelay_text">Snooze delay:</string>
    <string name="lengthOfRinging_text">Length of ringing:</string>
    <string name="method_text">Method:</string>
    <string name="difficulty_text">Math difficulty:</string>
    <string name="qr_text">QR:</string>
    <string name="qrNewScan_text">New item</string>
    <string name="qrClearScans_text">Clear all</string>
    <string name="ringing_text">Ringing:</string>
    <string name="ringtonePicker_text">Choose ringtone</string>
    <string name="daysPicker_text">Repeat:</string>
    <string name="monday">Mo</string>   <!-- tyto navic i main activity -->
    <string name="sunday">Su</string>
    <string name="saturday">Sa</string>
    <string name="friday">Fr</string>
    <string name="thursday">Th</string>
    <string name="wednesday">We</string>
    <string name="tuesday">Tu</string>
    <string name="start_alarm">Start alarm</string>

    <!-- response -->
    <string name="snooze_alarm">Snooze</string>

    <!-- simple response -->
    <string name="simple_alarm_name">Alarm!</string>
    <string name="dismiss_alarm">Dismiss alarm</string>

    <!-- math response -->
    <string name="math_response_alarmName">Alarm!</string>
    <string name="math_solve">Solve:</string>
    <string name="math_check_result">Check result</string>

    <!-- qr response -->
    <string name="scan">Scan!</string>
    <string name="qr_scan_text">Item to scan:</string>
    <string name="dialog_setQrHint">Set description of the QR code (i.e. \"toothpaste\")</string>
    <string name="qrScanPrompt">Scan code from: </string>
    <string name="dialog_confirm">Save</string>
    <string name="qrScanWrong">Wrong item! Try it again.</string>

    <string name="details">Details</string>
    <string name="delete_alarm">Delete alarm</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>
    <string name="app_name">Alarming Math</string>
    <string name="title_activity_alarm_create">New Alarm</string>
    <string name="title_activity_alarm_update">Update alarm</string>
    <string name="title_activity_alarm_response">Alarm Response</string>
    <string name="title_activity_alarm_response_qr">Alarm Response QR</string>

    <string name="hello_world">Hello world!</string>

    <string name="alarm_ring">Alarm is ringing!</string>
    <string name="alarmNameHint">Alarm name</string>
    <string name="qrNewScanText">New scan</string>
    <string name="ringtonePickerText">Pick ringtone...</string>


    <string name="qrClearScansText">Clear all</string>
    <string name="noqr_selected">No qr selected!</string>
    <string name="OK">Ok</string>
    <string name="update">Update alarm</string>
    <string name="alarm_click_options">Options for alarm at</string>
    <string name="informations">Informations</string>
    <string name="time">Time:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="simple">Simple</string>
    <string name="math">Math</string>
    <string name="qr">QR</string>
    <string name="minute">minutes</string>
    <string name="second">seconds</string>
    <string name="delete_msg_alarm">Alarm at %s erased</string>
    <string name="math_succ_solved">You\'re awake!</string>
    <string name="math_wrong_answer">Wrong answer!! Try it again.</string>

</resources>
