
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.android.vyvojmobilapp.alarmingmath.AlarmCreateActivity">

        <TimePicker
            android:id="@+id/alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_field"
            android:layout_below="@+id/alarm_time_picker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/alarmNameHint"
            android:layout_alignRight="@+id/alarm_time_picker"
            android:layout_alignEnd="@+id/alarm_time_picker" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="active"
            android:checked="true"
            android:id="@+id/active_switch"
            android:layout_below="@+id/name_field"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vibrate"
            android:checked="true"
            android:id="@+id/vibrate_switch"
            android:layout_below="@+id/active_switch"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vibrate_switch"
            android:id="@+id/snoozeDelay_spinner"
            android:entries="@array/snoozeDelaySpinnerItems"
            android:spinnerMode="dropdown" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/snoozeDelay_spinner"
            android:id="@+id/lengthOfRinging_spinner"
            android:entries="@array/lengthOfRingingSpinnerItems"
            android:spinnerMode="dropdown" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lengthOfRinging_spinner"
            android:id="@+id/method_spinner"
            android:entries="@array/methodSpinnerItems"
            android:spinnerMode="dropdown" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/method_spinner"
            android:id="@+id/difficulty_spinner"
            android:entries="@array/difficultySpinnerItems"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/difficulty_spinner"
            android:weightSum="3"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:id="@+id/qr_buttons">


            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/qr_spinner"
                android:spinnerMode="dropdown" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/qrNewScanText"
                android:onClick="onQrNewScan"
                android:id="@+id/qrNewScan"
                />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/qrClearScansText"
                android:onClick="onQrClearAll"
                android:id="@+id/qrClearAll"
                />


        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_buttons"
            android:text="@string/ringtonePickerText"
            android:onClick="onRingtonePickerClick"
            android:id="@+id/ringtonePicker"
            />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_below="@+id/ringtonePicker"
            android:id="@+id/volumeSeekBar"
            android:layout_width="fill_parent"
            android:progress="75"
            android:max="100"
            />


        <LinearLayout
            android:id="@+id/days_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="7"
            android:layout_below="@id/volumeSeekBar"
            >

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/monday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/monday"
                android:textOff="@string/monday"/>

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/tuesday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/tuesday"
                android:textOff="@string/tuesday"/>

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/wednesday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/wednesday"
                android:textOff="@string/wednesday"/>

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/thursday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/thursday"
                android:textOff="@string/thursday"/>

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/friday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/friday"
                android:textOff="@string/friday"/>

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/saturday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/saturday"
                android:textOff="@string/saturday"/>

            <ToggleButton
                android:layout_weight="1"
                android:id="@+id/sunday_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/sunday"
                android:textOff="@string/sunday"/>


            </LinearLayout>

        <Button
            android:id="@+id/volumeBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_alarm"
            android:onClick="createAlarm"
            android:layout_below="@id/days_picker"
            />

    </RelativeLayout>
</ScrollView>
