<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.vyvojmobilapp.alarmingmath.AlarmResponse">

    <TextView android:text="@string/alarm_ring"
        android:id="@+id/alarm_ringing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:weightSum="2"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <Button
            android:id="@+id/dismiss_alarm"
            android:text="@string/dismiss_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="dismissAlarm"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/snooze_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/snooze_alarm"
            android:onClick="snoozeAlarm"
            android:layout_weight="1"
            />

        </LinearLayout>
</RelativeLayout>
