<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.vyvojmobilapp.alarmingmath.AlarmResponseQR">

    <TextView android:text="@string/qr_ringing"
        android:id="@+id/qr_ringing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textColor="@android:color/black"/>
    <TextView android:text=""
        android:id="@+id/qr_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:layout_below="@id/qr_ringing"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"/>
    <Button
        android:id="@+id/scan_button"
        android:text="@string/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/qr_item"
        android:onClick="scan"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:weightSum="2"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:visibility="gone"

        >

        <Button
            android:id="@+id/dismiss_alarm"
            android:text="@string/dismiss_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="dismissAlarm"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/snooze_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/snooze_alarm"
            android:onClick="snoozeAlarm"
            android:layout_weight="1"
            />

    </LinearLayout>
</RelativeLayout>
