<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.vyvojmobilapp.alarmingmath.QrResponseFragment">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.android.vyvojmobilapp.alarmingmath.SimpleResponseFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/qr_response_alarmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="bottom|center"
            android:text="@string/simple_alarm_name"
            android:textSize="40sp"
            android:paddingBottom="10dp"
            />
        <TextView
            android:id="@+id/qr_response_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|top"
            android:paddingTop="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/qr_ringing"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10pt"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/qr_scan_text"
            android:text="@string/qr_scan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="bottom"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            />

        <TextView
            android:id="@+id/qr_item"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="14pt"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/scan_button"
            android:text="@string/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
    </LinearLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<TextView android:text=""-->
            <!--android:id="@+id/qr_ringing"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="10pt"-->
            <!--android:textColor="@android:color/black"/>-->
        <!--<TextView android:text=""-->
            <!--android:id="@+id/qr_item"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/qr_ringing"-->
            <!--android:textSize="14pt"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:textColor="@android:color/black"/>-->
        <!--<Button-->
            <!--android:id="@+id/scan_button"-->
            <!--android:text="@string/scan"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/qr_item"-->
            <!--/>-->

    <!--</RelativeLayout>-->


</FrameLayout>


